tests/bad_programs/parse_errors/else_twice.nc
void f(int x) {
    if (x > 0) {
        x = 0;
    } else {
        x = 1;
    } else {
        x = 2;
    }
}
